--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "rn-extensions-share",
-  "version": "2.4.1",
-  "description": "Share-Extension using react-native for both ios and android",
-  "main": "lib/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/RocketChat/rn-extensions-share"
-  },
-  "keywords": [
-    "react-component",
-    "react-native",
-    "share-extension"
-  ],
-  "author": {
-    "name": "Djorkaeff Alexandre",
-    "email": "djorkaeffalexandre@gmail.com",
-    "url": "http://github.com/djorkaeffalexandre"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/RocketChat/rn-extensions-share"
-  },
-  "homepage": "https://github.com/RocketChat/rn-extensions-share"
+    "name": "react-native-share-extension",
+    "version": "2.4.1",
+    "description": "Share-Extension using react-native for both ios and android",
+    "main": "lib/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/RocketChat/rn-extensions-share"
+    },
+    "keywords": [
+        "react-component",
+        "react-native",
+        "share-extension"
+    ],
+    "author": {
+        "name": "Djorkaeff Alexandre",
+        "email": "djorkaeffalexandre@gmail.com",
+        "url": "http://github.com/djorkaeffalexandre"
+    },
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/RocketChat/rn-extensions-share"
+    },
+    "homepage": "https://github.com/RocketChat/rn-extensions-share"
 }
